# RotaInteligente

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml  requirements.txt  seed_traffic.py
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/clients/: __init__.py  geocoding_client.py  openroute_client.py  toll_client.py  traffic_client.py  weather_client.py
backend/app/core/: background.py  cache.py  config.py
backend/app/schemas/: __init__.py
backend/app/services/: holiday_service.py  route_service.py  traffic_light_service.py  traffic_service.py
backend/tests/: conftest.py  test_clients.py  test_integration.py  test_services.py
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/cypress/e2e/: route_analysis.cy.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: BestDeparturePanel.tsx  MapLegend.tsx  MapView.tsx  RoutePanel.tsx  SearchBox.tsx  SettingsModal.tsx  TopBar.tsx  TrafficBadge.tsx  TrafficLightPopup.tsx  WeatherTimeline.tsx
frontend/src/contexts/: ThemeContext.tsx
frontend/src/services/: api.ts
mobile/: App.tsx  README.md  app.json  package.json  tailwind.config.js  tsconfig.json
mobile/assets/: .gitkeep
mobile/src/components/: RouteResults.tsx  RouteTimeline.tsx  SearchPanel.tsx
mobile/src/services/: api.ts
